Fixed spacing and grid layout in portfolio-02.html

--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,7 @@ hr {
 	}
 
 	.artwork-2 {
-		width: 50%;
+		width: 70%;
 	}
 
 .work-discrption {
